// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`@cacheable caches values returned from the function 1`] = `
[
  "prefixCacheableClass_cached_"test"",
]
`;

exports[`@cacheable caches values returned from the function 2`] = `
[
  "prefixCacheableClass_cached_"test"",
]
`;

exports[`@cacheable caches values returned from the function 3`] = `
[
  "prefixCacheableClass_cached_"test"",
  [
    "test",
    "test",
  ],
  3600000,
]
`;
